--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,11 @@
-@import './tailwind';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@font-face {
+  font-family: Futura;
+  src: url(https://use.typekit.net/bzs5tqz.css);
+}
+
 
 a {
   @apply text-link;
